--- a/src/App.css
+++ b/src/App.css
@@ -45,14 +45,21 @@
 
 /* Heading */
 .h1 {
-  font-size: 24px;
+  font-size: 1.875rem;
   font-weight: 700; /* Bold */
   line-height: 120%;
   letter-spacing: 0;
 }
 
 .h2 {
-  font-size: 20px;
+  font-size: 1.5rem;
+  font-weight: 600; /* Semi Bold */
+  line-height: 120%;
+  letter-spacing: 0;
+}
+
+.h3 {
+  font-size: 1.25rem;
   font-weight: 600; /* Semi Bold */
   line-height: 120%;
   letter-spacing: 0;
@@ -60,65 +67,43 @@
 
 /* Body */
 .body1 {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 600; /* Semi Bold */
   line-height: 120%;
   letter-spacing: 0;
 }
 
 .body2 {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600; /* Semi Bold */
-  line-height: 120%;
+  line-height: 140%;
   letter-spacing: 0;
 }
 
 .body3 {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500; /* Medium */
   line-height: 120%;
-  letter-spacing: 0;
-}
-
-.body4 {
-  font-size: 14px;
-  font-weight: 600; /* Semi Bold */
-  line-height: 120%;
-  letter-spacing: 0;
-}
-
-.body5 {
-  font-size: 14px;
-  font-weight: 500; /* Medium */
-  line-height: 120%;
-  letter-spacing: 0;
-}
-
-/* 본문에서 사용될 스타일링 */
-.body6 {
-  font-size: 14px;
-  font-weight: 500; /* Medium */
-  line-height: 1.3rem;
   letter-spacing: 0;
 }
 
 /* Caption */
 .caption1 {
-  font-size: 12px;
-  font-weight: 600; /* Semi Bold */
+  font-size: 0.875rem;
+  font-weight: 500;
   line-height: 120%;
   letter-spacing: 0;
 }
 
 .caption2 {
-  font-size: 12px;
-  font-weight: 500; /* Medium */
+  font-size: 0.875rem;
+  font-weight: 400; /* Medium */
   line-height: 120%;
   letter-spacing: 0;
 }
 
 .caption3 {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 400; /* Regular */
   line-height: 120%;
   letter-spacing: 0;
